--- a/gruvbox_dark_soft.conf
+++ b/gruvbox_dark_soft.conf
@@ -1,4 +1,6 @@
-include ~/.config/kitty/themes/gruvbox_dark.conf
+include ./themes/gruvbox_dark.conf
 
 background  #32302f
 color0      #32302f
+
+# vim: ft=kitty:
