--- a/gruvbox_dark.conf
+++ b/gruvbox_dark.conf
@@ -2,11 +2,25 @@
 # Adapted to kitty by wdomitrz <witekdomitrz@gmail.com>
 
 cursor                  #928374
+cursor_text_color       background
+
+url_color               #83a598
+
+visual_bell_color       #8ec07c
+bell_border_color       #8ec07c
+
+active_border_color     #d3869b
+inactive_border_color   #665c54
 
 background              #282828
 foreground              #fbf1c7
 selection_foreground    #928374
 selection_background    #ebdbb2
+
+active_tab_foreground   #fbf1c7
+active_tab_background   #665c54
+inactive_tab_foreground #a89984
+inactive_tab_background #3c3836
 
 # black
 color0                  #282828
