--- a/gruvbox_light.conf
+++ b/gruvbox_light.conf
@@ -2,11 +2,25 @@
 # Adapted to kitty by wdomitrz <witekdomitrz@gmail.com>
 
 cursor                  #928374
+cursor_text_color       background
+
+url_color               #458588
+
+visual_bell_color       #689d6a
+bell_border_color       #689d6a
+
+active_border_color     #b16286
+inactive_border_color   #1d2021
 
 background              #fbf1c7
 foreground              #282828
 selection_foreground    #928374
 selection_background    #3c3836
+
+active_tab_foreground   #282828
+active_tab_background   #928374
+inactive_tab_foreground #7c6f64
+inactive_tab_background #ebdbb2
 
 # white
 color0                  #fbf1c7
