typography: color 0 needs to be a visible foreground

--- a/gruvbox_light.conf
+++ b/gruvbox_light.conf
@@ -22,8 +22,8 @@ active_tab_background   #928374
 inactive_tab_foreground #7c6f64
 inactive_tab_background #ebdbb2
 
-# white
-color0                  #fbf1c7
+# white (bg3)
+color0                  #bdae93
 color8                  #282828
 
 # red
