--- a/gruvbox_dark.conf
+++ b/gruvbox_dark.conf
@@ -22,8 +22,8 @@ active_tab_background   #665c54
 inactive_tab_foreground #a89984
 inactive_tab_background #3c3836
 
-# black
-color0                  #282828
+# black  (bg3)
+color0                  #665c54
 color8                  #7c6f64
 
 # red
