typography: all fg/bgs need to be readable
All of the foreground colors against the default background and
similarly all fo the background colors against the default foreground
need to be readable combinations.

The confusion stems from the fact that ansi terminals have two extra
colors to worry about: the default foreground and default background. In
gruvbox.vim these are fg1 and bg0 respectively, but in ansi that means
we have to avoid using these colors (fg1 and bg0) in the 16-color
pallete, since the result would be invisible.

To fix it, I've substituted fg3 for fg0 and bg3 for bg0 where they had
been used in the 16-color pallete. In the original colors/gruvbox.vim
you can find that these colors are indeed used alone (with default
fore/background) so that's my precedent.

--- a/gruvbox_dark.conf
+++ b/gruvbox_dark.conf
@@ -22,8 +22,8 @@ active_tab_background   #665c54
 inactive_tab_foreground #a89984
 inactive_tab_background #3c3836
 
-# black
-color0                  #282828
+# black  (bg3/bg4)
+color0                  #665c54
 color8                  #7c6f64
 
 # red
@@ -50,6 +50,6 @@ color13                 #d3869b
 color6                  #689d6a
 color14                 #8ec07c
 
-# white
+# white (fg4/fg3)
 color7                  #a89984
-color15                 #fbf1c7
+color15                 #bdae93
