--- a/gruvbox_light.conf
+++ b/gruvbox_light.conf
@@ -22,9 +22,9 @@ active_tab_background   #928374
 inactive_tab_foreground #7c6f64
 inactive_tab_background #ebdbb2
 
-# white
-color0                  #fbf1c7
-color8                  #282828
+# white (bg3/bg4)
+color0                  #bdae93
+color8                  #a89984
 
 # red
 color1                  #cc241d
@@ -50,6 +50,6 @@ color13                 #8f3f71
 color6                  #689d6a
 color14                 #427b58
 
-# black
+# black (fg4/fg3)
 color7                  #7c6f64
-color15                 #282828
+color15                 #665c54
