the default gruvbox foreground is fg1

--- a/gruvbox_light.conf
+++ b/gruvbox_light.conf
@@ -12,8 +12,10 @@ bell_border_color       #689d6a
 active_border_color     #b16286
 inactive_border_color   #1d2021
 
+#" Normal text
+#call s:HL('Normal', s:fg1, s:bg0)
+foreground              #3c3836
 background              #fbf1c7
-foreground              #282828
 selection_foreground    #928374
 selection_background    #3c3836
 
